--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -61,13 +61,13 @@ jobs:
       matrix:
         include:
           - name: MSVC
-          - name: mingw64
+          - name: MinGW
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup MSYS2 (only for MinGW)
-        if: ${{ matrix.name }} == mingw64
+      - name: Setup MSYS2 (MinGW)
+        if: ${{ matrix.name == 'MinGW' }}
         uses: msys2/setup-msys2@v2
         with:
           msystem: mingw64
@@ -76,7 +76,10 @@ jobs:
             git
             cmake
             ninja
-          pacboy: toolchain:p
+          pacboy: >-
+            toolchain:p
+            cmake:p
+            ninja:p
 
       - name: Prepare Raylib
         run: |
